<resources>
    <string name="app_name">Directorioapp</string>
    <string name="empleado_nombre">Nombre</string>
    <string name="empleado_apellido_p">ApellidoP</string>
    <string name="empleado_apellido_m">ApellidoM</string>
    <string name="empleado_no_nomina">Nomina</string>
    <string name="empleado_titulo">Empleado:</string>
    <string name="empleado_subtitulo">No. Nomina:</string>
    <string name="title_activity_agregar_empleado">activity_agregar_empleado</string>
    <string name="title_activity_datos_empleados">DatosEmpleados</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
