<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/empleado_titulo"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_empleado_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/empleado_nombre"
                android:textColor="@color/blanco"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_empleado_apellidop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/empleado_apellido_p"
                android:textColor="@color/blanco"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_empleado_apellidom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/empleado_apellido_m"
                android:textColor="@color/blanco"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empleado_subtitulo"
                android:textColor="@color/blanco"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/lbl_empleado_nomina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empleado_no_nomina"
                android:textColor="@color/blanco"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/blanco" />

    </LinearLayout>


</RelativeLayout>